<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <!--    flOutSide-->
    <FrameLayout
        android:id="@+id/flOutSide"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        layoutMain-->
        <LinearLayout
            android:id="@+id/layoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_16_solid_white"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <!--            tvTitle-->
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <!--            tvDescription-->
            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/are_you_sure_want_to_delete_this_item"
                android:textColor="#595959"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="27dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="23dp"
                android:orientation="horizontal">

                <!--                btnNo-->
                <TextView
                    android:id="@+id/btnNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_12_solid_gray"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:paddingVertical="12dp"
                    android:text="@string/cancel"
                    android:textColor="#787878"
                    android:textSize="14sp" />

                <!--                btnOk-->
                <TextView
                    android:id="@+id/btnYes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_12_solid_red"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:paddingVertical="12dp"
                    android:text="@string/ok"
                    android:textColor="@color/white_bg_app"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</layout>