<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg_app"
    tools:context=".ui.name_test.NameTestActivity">

    <!--    flActionBar-->
    <FrameLayout
        android:id="@+id/flActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>

    <!--    tvTitle-->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/enter_your_and_your_partner_s_birthday_and_see_if_you_two_are_compatible"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/flActionBar" />

    <!--    edtMyName-->
    <EditText
        android:id="@+id/edtMyName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="11dp"
        android:imeOptions="actionDone"
        android:background="@drawable/bg_16_stroke_pink_solid_white"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:hint="@string/me"
        android:maxLength="30"
        android:paddingHorizontal="16dp"
        android:paddingVertical="14dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="#CECECE"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteRow1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <!--    btnDeleteRow1-->
    <ImageView
        android:id="@+id/btnDeleteRow1"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="29dp"
        android:src="@drawable/ic_delete_line"
        app:layout_constraintBottom_toBottomOf="@+id/edtMyName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtMyName" />

    <!--    edtYourName-->
    <EditText
        android:id="@+id/edtYourName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="11dp"
        android:background="@drawable/bg_16_stroke_pink_solid_white"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:hint="@string/partner"
        android:imeOptions="actionDone"
        android:maxLength="30"
        android:paddingHorizontal="16dp"
        android:paddingVertical="14dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="#CECECE"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteRow2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMyName" />

    <!--    btnDeleteRow2-->
    <ImageView
        android:id="@+id/btnDeleteRow2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="29dp"
        android:src="@drawable/ic_delete_line"
        app:layout_constraintBottom_toBottomOf="@+id/edtYourName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtYourName" />

    <!--    btnAnalyze-->
    <TextView
        android:id="@+id/btnAnalyze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_16_solid_pink_fd"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:text="@string/analyze"
        android:textColor="@color/white_bg_app"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/edtYourName" />
</androidx.constraintlayout.widget.ConstraintLayout>