<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg_app"
    tools:context=".ui.edit.EditActivity">

    <FrameLayout
        android:id="@+id/flActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/actionBar"
            layout="@layout/layout_actionbar" />
    </FrameLayout>

    <!--    scvMain-->
    <ScrollView
        android:id="@+id/scvMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flActionBar">

        <!--        lnlMain-->
        <LinearLayout
            android:id="@+id/lnlMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/name"
                android:textColor="@color/black_40"
                android:textSize="20sp" />

            <!--            edtTitle-->
            <EditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_16_stroke_pink_solid_white"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/input_your_topic"
                android:imeOptions="actionDone"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:paddingVertical="14dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#D2D2D2"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/relationship_start_date"
                android:textColor="@color/black_40"
                android:textSize="20sp" />

            <!--            cldStartDate-->

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/couple_s_image"
                android:textColor="@color/black_40"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gl08">

                <!--                btnChooseMe-->
                <LinearLayout
                    android:id="@+id/btnChooseMe"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="1000dp"
                        app:cardElevation="0dp">

                        <!--                imvMe-->
                        <ImageView
                            android:id="@+id/imvMe"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_avatar_default" />
                    </androidx.cardview.widget.CardView>

                    <!--            tvNameMe-->
                    <TextView
                        android:id="@+id/tvNameMe"
                        style="@style/single_marquee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:text="@string/me"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <!--            tvAgeMe-->
                    <TextView
                        android:id="@+id/tvAgeMe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_8_stroke_pink_solid_pink_opacity"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingHorizontal="8dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="3dp"
                        android:text="@string/age"
                        android:textColor="#FF0077"
                        android:textSize="12sp" />
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

                <!--                btnChooseYou-->
                <LinearLayout
                    android:id="@+id/btnChooseYou"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="1000dp"
                        app:cardElevation="0dp">

                        <!--                imvYou-->
                        <ImageView
                            android:id="@+id/imvYou"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_avatar_default" />
                    </androidx.cardview.widget.CardView>

                    <!--            tvNameYou-->
                    <TextView
                        android:id="@+id/tvNameYou"
                        style="@style/single_marquee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:text="@string/you"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <!--            tvAgeYou-->
                    <TextView
                        android:id="@+id/tvAgeYou"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_8_stroke_pink_solid_pink_opacity"
                        android:fontFamily="@font/poppins_regular"
                        android:paddingHorizontal="8dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="3dp"
                        android:text="@string/age"
                        android:textColor="#FF0077"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>